--- a/Leaflet-Part-2/static/css/quakes.css
+++ b/Leaflet-Part-2/static/css/quakes.css
@@ -1,15 +1,13 @@
-#map { height: 600px; }
-
 body {
     padding: 0;
     margin: 0;
   }
   
-  /* #map,
+  #mapid,
   body,
   html {
     height: 100%;
-  } */
+  }
   
   /* Set Legend Style */
   .info {
